public static class AnimatorConstants
{
    public const string Y_VELOCITY = "yVelocity";
    public const string ATTACK = "attack";
    public const string DEATH = "death";
    public const string BASIC_ATTACK_INDEX = "basicAttackIndex";
    public const string PLUNGE_ATTACK_TRIGGER = "plungeAttackTrigger";
    public const string MOVE_ANIM_SPEED_MULTI = "moveAnimSpeedMulti";
}
